<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.duanli.student_portal.EventDetailActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/calendar"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:rippleColor="?android:attr/colorBackground"
        app:elevation="7dp" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.duanli.student_portal.EventDetailActivityDetailActivity"
        tools:showIn="@layout/activity_event_detail">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:id="@+id/tvEventName"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textSize="28sp"/>
            <!--android:text="@string/demoEventTitle"/>-->

            <TextView
                android:id="@+id/tvEventOrganizer"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:layout_below="@+id/tvEventName" />

            <TextView
                android:id="@+id/tvEventTimeDateTag"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_below="@+id/tvEventOrganizer"
                android:layout_alignParentLeft="true"
                android:text="@string/EventTimeDateTag"/>

            <TextView
                android:id="@+id/tvEventTimeDate"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_below="@+id/tvEventOrganizer"
                android:layout_toRightOf="@+id/tvEventTimeDateTag"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/tvEventLocationTag"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_below="@+id/tvEventTimeDate"
                android:layout_alignParentLeft="true"
                android:text="@string/EventLocationTag"/>

            <TextView
                android:id="@+id/tvEventLocation"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_below="@+id/tvEventTimeDate"
                android:layout_toRightOf="@+id/tvEventLocationTag"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/tvEventPriceTag"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_below="@+id/tvEventLocation"
                android:layout_alignParentLeft="true"
                android:text="@string/EventPriceTag"/>

            <TextView
                android:id="@+id/tvEventPrice"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEventLocation"
                android:textSize="14sp"
                android:layout_toRightOf="@+id/tvEventPriceTag"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/tvEventCapacityTag"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_below="@+id/tvEventPrice"
                android:layout_alignParentLeft="true"
                android:text="@string/EventCapacityTag"/>

            <TextView
                android:id="@+id/tvEventCapacity"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_below="@+id/tvEventPrice"
                android:layout_toRightOf="@+id/tvEventCapacityTag"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/tvEventDescription"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tvEventCapacity" />

            <TextView
                android:id="@+id/tvEventHashTag"
                android:layout_marginTop="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_below="@id/tvEventDescription"
                android:layout_marginLeft="5dp"
                />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/event_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <ImageView
            android:id="@+id/event_backdrop"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="250dp" />

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
