<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.duanli.student_portal.ItemDetailActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        android:src="@drawable/fav"
        app:elevation="6dp"
        app:backgroundTint="@android:color/holo_blue_dark" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.duanli.student_portal.ItemDetailActivity"
        tools:showIn="@layout/activity_item_detail">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:id="@+id/tvItemName"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textSize="28sp" />

            <!--<TextView-->
                <!--android:id="@+id/tvItemTypeTag"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_marginLeft="@dimen/text_margin"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="14sp"-->
                <!--android:layout_below="@+id/tvItemName"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:text="@string/ItemTypeTag"/>-->

            <!--<TextView-->
                <!--android:id="@+id/tvItemType"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="14sp"-->
                <!--android:layout_below="@+id/tvItemName"-->
                <!--android:layout_toRightOf="@+id/tvItemTypeTag"-->
                <!--android:layout_marginLeft="5dp" />-->

            <TextView
                android:id="@+id/tvItemPriceTag"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_below="@+id/tvItemName"
                android:layout_alignParentLeft="true"
                android:text="@string/ItemPriceTag"/>

            <TextView
                android:id="@+id/tvItemPrice"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvItemName"
                android:textSize="14sp"
                android:layout_toRightOf="@+id/tvItemPriceTag"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/tvItemSellerTag"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_below="@+id/tvItemPrice"
                android:layout_alignParentLeft="true"
                android:text="@string/ItemSellerTag"/>

            <TextView
                android:id="@+id/tvItemSeller"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvItemPrice"
                android:textSize="14sp"
                android:layout_toRightOf="@+id/tvItemSellerTag"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/tvContactTag"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_below="@+id/tvItemSeller"
                android:layout_alignParentLeft="true"
                android:text="@string/ItemContactTag"/>

            <TextView
                android:id="@+id/tvSellerContact"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvItemSeller"
                android:textSize="14sp"
                android:layout_toRightOf="@+id/tvContactTag"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/tvItemDescription"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tvContactTag"/>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/item_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/item_backdrop"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_weight="1"
            android:layout_height="250dp" />

    </android.support.design.widget.AppBarLayout>


</android.support.design.widget.CoordinatorLayout>
