<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserAreaActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop = "50dp"
        android:ems="10"
        android:hint="User ID" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etUsername"
        android:ems="10"
        android:layout_marginTop = "50dp"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop = "50dp"
        android:text="logIn" />


    <Button
        android:id="@+id/bRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop = "120dp"
        android:layout_below="@+id/etPassword"
        android:text="Register"


        />

</RelativeLayout>

    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:orientation="vertical"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--tools:context="com.example.duanli.student_portal.LoginActivity">-->

    <!--&lt;!&ndash; Login progress &ndash;&gt;-->
    <!--<ProgressBar-->
        <!--android:id="@+id/login_progress"-->
        <!--style="?android:attr/progressBarStyleLarge"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:visibility="gone" />-->

    <!--<ScrollView-->
        <!--android:id="@+id/login_form"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<LinearLayout-->
            <!--android:id="@+id/email_login_form"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical">-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<AutoCompleteTextView-->
                    <!--android:id="@+id/email"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/prompt_email"-->
                    <!--android:inputType="textEmailAddress"-->
                    <!--android:maxLines="1"-->
                    <!--android:singleLine="true" />-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<EditText-->
                    <!--android:id="@+id/password"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/prompt_password"-->
                    <!--android:imeActionId="@+id/login"-->
                    <!--android:imeActionLabel="@string/action_sign_in_short"-->
                    <!--android:imeOptions="actionUnspecified"-->
                    <!--android:inputType="textPassword"-->
                    <!--android:maxLines="1"-->
                    <!--android:singleLine="true" />-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<Button-->
                <!--android:id="@+id/email_sign_in_button"-->
                <!--style="?android:textAppearanceSmall"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:text="@string/action_sign_in"-->
                <!--android:textStyle="bold" />-->

        <!--</LinearLayout>-->
    <!--</ScrollView>-->
<!--</LinearLayout>-->

